--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "scientry",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+    "name": "scientry",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "prettier": "npx prettier --write .",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@nextui-org/react": "^2.2.9",
+        "framer-motion": "^11.0.3",
+        "next": "14.1.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "recoil": "^0.7.7",
+        "sequelize": "^6.36.0",
+        "socket.io": "^4.7.4",
+        "socket.io-client": "^4.7.4",
+        "sqlite3": "^5.1.7"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "eslint-config-prettier": "^9.1.0",
+        "postcss": "^8",
+        "prettier": "^3.2.5",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    }
 }
