--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@material-symbols/svg-300": "^0.15.0",
+        "@nextui-org/react": "^2.2.9",
         "framer-motion": "^11.0.3",
         "next": "14.1.0",
         "react": "^18",
@@ -19,7 +20,8 @@
         "sequelize": "^6.36.0",
         "socket.io": "^4.7.4",
         "socket.io-client": "^4.7.4",
-        "sqlite3": "^5.1.7"
+        "sqlite3": "^5.1.7",
+        "taily-ui": "^1.0.5"
     },
     "devDependencies": {
         "@svgr/webpack": "^8.1.0",
