--- a/package.json
+++ b/package.json
@@ -3,39 +3,43 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "npm run prettier && npm run lint && next dev --turbo",
+        "dev": "npm run prettier && npm run lint && next dev --turbopack",
         "build": "next build",
-        "start": "next start -p 3002",
+        "start": "next start",
         "prettier": "npx prettier --write .",
         "lint": "next lint"
     },
     "dependencies": {
-        "@material-symbols/svg-300": "^0.15.0",
-        "@nextui-org/react": "^2.2.9",
-        "framer-motion": "^11.0.3",
-        "next": "14.1.0",
-        "react": "^18",
-        "react-dom": "^18",
-        "recoil": "^0.7.7",
+        "@heroui/react": "^2.7.8",
+        "@material-symbols/svg-300": "^0.31.2",
+        "framer-motion": "^12.11.3",
+        "next": "15.3.2",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
         "sequelize": "^6.36.0",
         "socket.io": "^4.7.4",
         "socket.io-client": "^4.7.4",
         "sqlite3": "^5.1.7",
-        "taily-ui": "^1.0.5"
+        "taily-ui": "^1.2.29",
+        "zustand": "^5.0.4"
     },
     "devDependencies": {
         "@svgr/webpack": "^8.1.0",
         "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/react": "19.1.4",
+        "@types/react-dom": "19.1.5",
         "autoprefixer": "^10.0.1",
-        "eslint": "^8",
-        "eslint-config-next": "14.1.0",
+        "eslint": "^8.57.1",
+        "eslint-config-next": "15.3.2",
         "eslint-config-prettier": "^9.1.0",
         "postcss": "^8",
         "prettier": "^3.2.5",
-        "prettier-plugin-tailwindcss": "^0.5.11",
-        "tailwindcss": "^3.3.0",
+        "prettier-plugin-tailwindcss": "^0.5.14",
+        "tailwindcss": "^3.4.17",
         "typescript": "^5"
+    },
+    "overrides": {
+        "@types/react": "19.1.4",
+        "@types/react-dom": "19.1.5"
     }
 }
